@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Rob N ★
 copyright_year   = 2018
 
-version = 0.001
+version = 0.002
 
 [@Filter]
 -bundle = @Basic
